Unreviewed, follow-up fix after 296180@main https://bugs.webkit.org/show_bug.cgi?id=294433 rdar://153273774

* Source/JavaScriptCore/runtime/ArrayPrototypeInlines.h:
(JSC::fastArrayJoin):

Canonical link: https://commits.webkit.org/296183@main